--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>controllers.RestMainKt</mainClass>
+              <mainClass>controllers.ServerMainKt</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -122,9 +122,9 @@
         <version>1.1.3</version>
         <configuration>
           <jdkVersion>1.8</jdkVersion>
-          <appName>YOUR APP NAME</appName>
+          <appName>cryptic-spire-55717</appName>
           <processTypes>
-            <web>java -jar ./target/pacemaker-skeleton-kotlin-1.0-jar-with-dependencies.jar</web>
+            <web>java -jar ./target/pacemaker-server-1.0-jar-with-dependencies.jar</web>
           </processTypes>
         </configuration>
       </plugin>      
